--- a/package.json
+++ b/package.json
@@ -3,17 +3,22 @@
   "version": "0.1.0",
   "private": true,
   "scripts": {
-    "serve": "vue-cli-service serve",
+    "serve": "vue-cli-service serve --mode dev",
     "build": "vue-cli-service build",
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "@tinymce/tinymce-vue": "^3.2.8",
     "animejs": "^3.2.0",
     "axios": "^0.19.2",
     "comment-message-editor": "^1.0.1",
     "core-js": "^3.6.4",
+    "element-ui": "^2.15.10",
     "highlight.js": "^11.5.1",
+    "marked": "^4.1.1",
     "mockjs": "^1.1.0",
+    "nanoid": "^4.0.0",
+    "tinymce": "^6.2.0",
     "vue": "^2.6.11",
     "vue-router": "^3.1.6",
     "vuex": "^3.1.3"
